fix: 修复全局样式page问题

--- a/examples/outComponents/common/index.css
+++ b/examples/outComponents/common/index.css
@@ -1,7 +1,1 @@
-:root {
-  /* scanning component */
-  --camera-height: 250px;
-  --camera-width: 252px;
-  --camera-top-margin: 24px;
-  --scan-scroll-height: 25px;
-}
+@import './style/var.wxss';
